# rfkit

./: ARCHITECTURE.md  ARCHITECTURE_claude.md  CHANGES_SUMMARY.md  Cargo.toml  NELDER_MEAD_IMPROVEMENTS.md  PTSX_ZEROS_IMPLEMENTATION.md  QUICK_START_ANTI_LOCAL_MINIMA.md  README.md
.config/: nextest.toml
rfkit/: Cargo.toml
rfkit-base/: ARCHITECTURE.md  Cargo.toml
rfkit-base/src/: consts.rs  convert.rs  impedance.rs  lib.rs  macros.rs  math.rs  num.rs  prelude.rs  pts.rs  units.rs  util.rs
rfkit-base/src/num/: complex.rs
rfkit-base/src/pts/: ix1.rs  ix2.rs  ix3.rs
rfkit-base/src/units/: array.rs  builder.rs  scalar.rs  scale.rs  traits.rs  unit.rs
rfkit-circuit/: ARCHITECTURE.md  Cargo.toml  debug.py
rfkit-circuit/.config/: nextest.toml
rfkit-circuit/src/: circuit.rs  element.rs  lib.rs  prelude.rs
rfkit-circuit/src/element/: capacitor.rs  ground.rs  inductor.rs  mbend.rs  mlef.rs  mlin.rs  msub.rs  port.rs  q.rs  resistor.rs  short.rs  transformer.rs
rfkit-minimize/: ARCHITECTURE.md  Cargo.toml
rfkit-minimize/data/: test_3.s2p
rfkit-minimize/data/1010_6x60um/: test_feeds.dscr
rfkit-minimize/data/1010_6x60um/backup/: EG0520U_1010_6x60_2SDBCB2EV_1915934D06_RC2943_3Vd_36mA.s2p  EG0520U_1010_6x60_2SDBCB2EV_1915934D06_RC2943_3Vd_45mA.s2p  EG0520U_1010_6x60_2SDBCB2EV_1915934D06_RC2943_4Vd_36mA.s2p  EG0520U_1010_6x60_2SDBCB2EV_1915934D06_RC2943_4Vd_45mA.s2p  EG0520U_1010_6x60_2SDBCB2EV_1915934D06_RC2943_4Vd_54mA.s2p  EG0520U_1010_6x60_2SDBCB2EV_1915934D06_RC2952_3Vd_36mA.s2p  EG0520U_1010_6x60_2SDBCB2EV_1915934D06_RC2952_4Vd_18mA.s2p  EG0520U_1010_6x60_2SDBCB2EV_1915934D06_RC4034_3.5Vd_18mA.s2p  EG0520U_1010_6x60_2SDBCB2EV_1915934D06_RC4034_3.5Vd_36mA.s2p  EG0520U_1010_6x60_2SDBCB2EV_1915934D06_RC4034_3Vd_45mA.s2p  EG0520U_1010_6x60_2SDBCB2EV_1915934D06_RC4034_3Vd_54mA.s2p  EG0520U_1010_6x60_2SDBCB2EV_1915934D06_RC4034_4Vd_18mA.s2p  EG0520U_1010_6x60_2SDBCB2EV_1915934D06_RC4034_4Vd_54mA.s2p  EG0520U_1010_6x60_2SDBCB2EV_1915934D06_RC7325_2.5Vd_54mA.s2p  EG0520U_1010_6x60_2SDBCB2EV_1915934D06_RC7325_3.5Vd_18mA.s2p  EG0520U_1010_6x60_2SDBCB2EV_1915934D06_RC7325_3.5Vd_54mA.s2p  EG0520U_1010_6x60_2SDBCB2EV_1915934D06_RC7325_3Vd_36mA.s2p  EG0520U_1010_6x60_2SDBCB2EV_1915934D06_RC7325_4Vd_45mA.s2p
rfkit-minimize/data/1010_6x60um/backup2/: EG0520U_1010_6x60_2SDBCB2EV_1915934D06_RC2952_3Vd_27mA.s2p  EG0520U_1010_6x60_2SDBCB2EV_1915934D06_RC4034_Vg_N1.5V_Vd_0v.s2p  EG0520U_1010_6x60_2SDBCB2EV_1915934D06_RC7325_Vg_N1.5V_Vd_0v.s2p
rfkit-minimize/src/: lib.rs  minimize.rs  prelude.rs
rfkit-minimize/src/minimize/: bracket.rs  brent.rs  cma_es.rs  conjugate_gradient.rs  dbrent.rs  golden.rs  interior_point.rs  nelder_mead.rs  powell.rs  quasi_newton.rs  simplex.rs
rfkit-network/: ARCHITECTURE.md  Cargo.toml
rfkit-network/data/1010_6x60um/backup/: EG0520U_1010_6x60_2SDBCB2EV_1915934D06_RC2943_2.5Vd_27mA.s2p  (+15 more)
rfkit-network/src/: lib.rs  network.rs  parameter.rs  prelude.rs
rfkit-network/src/network/: builder.rs  file.rs  network.rs  point.rs  points.rs  port_points.rs
rfkit/benches/: nelder_mead_benchmarks.rs
rfkit/examples/: nelder_mead_multimodal.md  ptsx_zeros_demo.rs
rfkit/src/: lib.rs
(+205 files in other folders)
