[package]
name = "rfkit"
version = "0.3.0"
edition = "2024"

[profile.release]
codegen-units=1
lto="fat"
panic="abort"

[dependencies]
anyhow = "1.0.98"
approx = "0.5.1"
dyn-clone = "1.0.19"
fastrand = "2.0"
float-cmp = "0.10.0"
ndarray = "0.17.1"
ndarray-linalg = { version = "0.18.0", features = ["openblas-static"] }
num = { version = "0.4.3", features = ["serde"] }
num-traits = "0.2.19"
rand = "0.9.2"
rand_chacha = "0.9.0"
rand_distr = "0.5.1"
regex = "1.11.1"
rug = { version = "1.27.0", features = ["float", "complex"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
simple-error = "0.3.1"

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }
fastrand = "2.0"

[[bench]]
name = "nelder_mead_benchmarks"
harness = false

[profile.bench]
debug = true
