[package]
name = "rfkit-base"
version.workspace = true
edition.workspace = true

[dependencies]
approx.workspace = true
ndarray.workspace = true
ndarray-linalg.workspace = true
num.workspace = true
num-complex.workspace = true
num-traits.workspace = true
serde.workspace = true
twofloat.workspace = true
