[package]
name = "rfkit-circuit"
version.workspace = true
edition.workspace = true

[dependencies]
anyhow.workspace = true
dyn-clone.workspace = true
ndarray.workspace = true
ndarray-linalg.workspace = true
num-complex.workspace = true
num-traits.workspace = true
serde.workspace = true
twofloat.workspace = true
rfkit-base.workspace = true
rfkit-network.workspace = true
enum_dispatch = "0.3.13"
