[package]
name = "rfkit-minimize"
version.workspace = true
edition.workspace = true

[dependencies]
dyn-clone.workspace = true
fastrand.workspace = true
ndarray.workspace = true
ndarray-linalg.workspace = true
ndarray-rand.workspace = true
num-complex.workspace = true
num-traits.workspace = true
rand.workspace = true
rand_chacha.workspace = true
rand_distr.workspace = true
serde.workspace = true
rfkit-base.workspace = true
rfkit-network.workspace = true
twofloat.workspace = true

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }
fastrand.workspace = true
