[package]
name = "rfkit-network"
version.workspace = true
edition.workspace = true

[dependencies]
anyhow.workspace = true
ndarray.workspace = true
ndarray-linalg.workspace = true
num-complex.workspace = true
num-traits.workspace = true
regex.workspace = true
serde.workspace = true
serde_json.workspace = true
twofloat.workspace = true
rfkit-base.workspace = true
